# cmake-library-template

./: .gitignore  CMakeLists.txt
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
example/: CMakeLists.txt
example/src/: example_hello_world.c
include/: hello_world.h
src/: foo.c  foo.h  hello_world.c
test/: CMakeLists.txt
test/src/: test_hello_world.cpp
